--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,1 +1,12 @@
-<h2>Welcome to the Recipe Book</h2>
+<div class="row ">
+    <div class="col-xs-10">
+        <h2>Welcome to the Recipe Book</h2>
+    </div>
+    <div class="col-xs-2 align-self-end">
+        <ul class="list-group">
+            <a class="list-group-item">
+                Total Price:{{totalPrice}}
+            </a>
+        </ul>
+    </div>
+</div>
