--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -41,7 +41,7 @@
       <li
         class="list-group-item"
         *ngFor="let ingredient of recipe.ingredients">
-        {{ ingredient.name }} - {{ ingredient.amount }}
+        {{ ingredient.name }} - {{ ingredient.amount }} ${{ingredient.price}}
       </li>
     </ul>
   </div>
