--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -60,7 +60,7 @@
             *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index"
             [formGroupName]="i"
             style="margin-top: 10px">
-          <div class="col-xs-8">
+          <div class="col-xs-6">
             <input
             type="text"
             class="form-control"
@@ -71,6 +71,15 @@
             type="number"
             class="form-control"
             formControlName="amount">
+          </div>
+          <div class="col-xs-2">
+            <ul class="list-group">
+              <li
+                class="list-group-item"
+                *ngFor="let ingredient of recipe.ingredients">
+                 hex
+              </li>
+            </ul>
           </div>
           <div class="col-xs-2">
             <button
