--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -25,6 +25,19 @@
           required
           pattern="^[1-9]+[0-9]*$"
           >
+          
+        </div>
+        <div class="col-sm-2 form-group">
+          <label for="price">Price</label>
+          <input 
+          type="number" 
+          id="price" 
+          class="form-control"
+          name="price"
+          ngModel
+          required
+          pattern="^\d{0,8}[.]?\d{1,4}$"
+          >
         </div>
       </div>
       <div class="row">
