--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -4,7 +4,8 @@
     </div>
     <div class="col-xs-2 align-self-end">
         <ul class="list-group">
-            <a class="list-group-item">
+            <a class="list-group-item"
+            (click)="getTotalPrice(i)">
                 Total Price:{{totalPrice}}
             </a>
         </ul>
